Changelog
=========

1.0b6 - Unreleased
------------------

* In solrSearchResults, if the passed in request is a dict, look up 
  request to enable adaptation into PloneFlare.
  [tesdal]

* Added support for objects with a 'query' attribute as search values.
  [tmog]


1.0b5 - Released December 16, 2008
----------------------------------

* Fix and extend logging in "sync" maintenance view.
  [witsch]


1.0b4 - Released November 23, 2008
----------------------------------

* Filter control characters to prevent indexing errors.  This fixes
  http://plone.org/products/collective.solr/issues/1
  [witsch]

* Avoid using brains when getting all objects from the catalog for sync runs.
  [witsch]

* Prefix output from maintenance views with a time-stamp.
  [witsch]


1.0b3 - Released November 12, 2008
----------------------------------

* Fix url fallback during schema retrieval.
  [witsch]

* Fix issue regarding quoting of white space when searching.
  [witsch]

* Make indexing operations more robust in case the schema is missing a
  unique key or couldn't be parsed.
  [witsch]


1.0b2 - Released November 7, 2008
---------------------------------

* Make schema retrieval slightly more robust to not let network failures
  prevent access to the site.
  [witsch]


1.0b1 - Released November 5, 2008
---------------------------------

* Initial release
  [witsch]
