@@ -54,7 +54,7 @@ class Search(object):
             parameters['rows'] = config.max_results or ''
         logger.debug('searching for %r (%r)', query, parameters)
         response = connection.search(q=query, **parameters)
-        return getattr(SolrResponse(response), 'response', [])
+        return SolrResponse(response)
 
     __call__ = search
 
