@@ -177,7 +177,7 @@ class SearchTests(TestCase):
         request = getData('search_request.txt')
         output = fakehttp(self.conn, schema, search)    # fake responses
         query = self.search.buildQuery('"id:[* TO *]"')
-        results = self.search(query, rows=10, wt='xml', indent='on')
+        results = self.search(query, rows=10, wt='xml', indent='on').results()
         normalize = lambda x: sorted(x.split('&'))      # sort request params
         self.assertEqual(normalize(output.get(skip=1)), normalize(request))
         self.assertEqual(results.numFound, '1')
